include/dss_capi.h

    /*! 
    Reactance matrix, ohms per unit length
    */
    DSS_CAPI_DLL void LineCodes_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void LineCodes_Set_Cmatrix(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineCodes_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineCodes_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Normal Ampere rating
    */
    DSS_CAPI_DLL double LineCodes_Get_NormAmps(void);
    DSS_CAPI_DLL void LineCodes_Set_NormAmps(double Value);
    /*! 
    Emergency ampere rating
    */
    DSS_CAPI_DLL double LineCodes_Get_EmergAmps(void);
    DSS_CAPI_DLL void LineCodes_Set_EmergAmps(double Value);
    /*! 
    Array of strings with names of all devices
    */
    DSS_CAPI_DLL void LineCodes_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);