src/v8/CAPI_LineCodes.pas


end;
//------------------------------------------------------------------------------
PROCEDURE LineCodes_Get_Xmatrix(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
VAR
  Result: PDoubleArray;
   i,j, k:Integer;
   pLineCode:TLineCodeObj;

begin
  Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       WITH pLineCode DO Begin
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (Sqr(FNphases) - 1) + 1);
         k := 0;
         FOR i := 1 to FNPhases DO
          FOR j := 1 to FNphases DO
          Begin
             Result[k] :=  Z.GetElement(i,j).im;
             Inc(k);
          End;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_Cmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   Factor:Double;
   pLineCode:TLineCodeObj;

begin
    Value := PDoubleArray(ValuePtr);

  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       WITH pLineCode DO Begin
         Factor  := TwoPi * BaseFrequency  * 1.0e-9;
         k := (0);
         FOR i := 1 to FNPhases DO
          FOR j := 1 to FNphases DO
          Begin
             Yc.SetElement(i,j, Cmplx(0.0, Value[k]*Factor));
             Inc(k);
          End;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   pLineCode:TLineCodeObj;
   Ztemp:complex;

begin
    Value := PDoubleArray(ValuePtr);

  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       WITH pLineCode DO Begin
         k := (0);
         FOR i := 1 to FNPhases DO
          FOR j := 1 to FNphases DO
          Begin
             ZTemp := Z.GetElement(i,j);
             Z.SetElement(i,j, Cmplx( Value[k], ZTemp.im));
             Inc(k);
          End;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   pLineCode:TLineCodeObj;
   Ztemp:complex;

begin
    Value := PDoubleArray(ValuePtr);

  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       WITH pLineCode DO Begin
         k := (0);
         FOR i := 1 to FNPhases DO
          FOR j := 1 to FNphases DO
          Begin
             ZTemp := Z.GetElement(i,j);
             Z.SetElement(i,j, Cmplx( ZTemp.re, Value[k] ));
             Inc(k);
          End;
       End;
  End;

end;
//------------------------------------------------------------------------------
function LineCodes_Get_NormAmps():Double;cdecl;
Var
   pLineCode:TLineCodeObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       Result := pLineCode.NormAmps  ;
  End

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_NormAmps(Value: Double);cdecl;
Var
   pLineCode:TLineCodeObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       pLineCode.NormAmps  := Value   ;
  End

end;
//------------------------------------------------------------------------------
function LineCodes_Get_EmergAmps():Double;cdecl;
Var
   pLineCode:TLineCodeObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       Result := pLineCode.EmergAmps   ;
  End

end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_EmergAmps(Value: Double);cdecl;
Var
   pLineCode:TLineCodeObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pLineCode := LineCodeClass.GetActiveObj ;
       pLineCode.EmergAmps := Value   ;
  End

end;
//------------------------------------------------------------------------------
PROCEDURE LineCodes_Get_AllNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
VAR
  Result: PPAnsiCharArray;
  LineCodeElem:TLineCodeObj;
  k:Integer;

Begin
    Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    IF ActiveCircuit[ActiveActor] <> Nil THEN
     WITH ActiveCircuit[ActiveActor] DO
     If LineCodeClass.ElementList.ListSize  >0 Then
     Begin
       DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (LineCodeClass.ElementList.ListSize-1) + 1);
       k:=0;
       LineCodeElem := LineCodeClass.ElementList.First;
       WHILE LineCodeElem<>Nil DO
       Begin
          Result[k] := DSS_CopyStringAsPChar(LineCodeElem.Name);
          Inc(k);
          LineCodeElem := LineCodeClass.ElementList.Next;
       End;
     End;

end;
//------------------------------------------------------------------------------
END.
